platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/traces/probe.exams-curated-exam00-v1.exams-exam00-ft_pow/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/datasets/exercises/exams/exam00/ft_pow/tests/main.c: In function 'main':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/datasets/exercises/exams/exam00/ft_pow/tests/main.c:10:21: error: expected ';' before 'return'
   10 |         printf("\n")
      |                     ^
      |                     ;
   11 |         return 1;
      |         ~~~~~~       
